--- a/EventBooking/appsettings.json
+++ b/EventBooking/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-8I40EID;Database=EventBookingDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
